--- a/public/500.html
+++ b/public/500.html
@@ -19,8 +19,8 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-    <p>We've been notified about this issue and we'll take a look at it shortly.</p>
+    <h1>The webmaster is bad at coding.</h1>
+    <p>Tell him to get better.</p>
   </div>
 </body>
 </html>
