serve static assets on

--- a/public/404.html
+++ b/public/404.html
@@ -20,7 +20,7 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <h1>The computer hates you.</h1>
-    <p>Turn around and go back where you came from.</p>
+    <p>Turn around and go back where you came from.  (This page does not exist.)</p>
   </div>
 </body>
 </html>
