--- a/public/500.html
+++ b/public/500.html
@@ -20,7 +20,7 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <h1>The webmaster is bad at coding.</h1>
-    <p>Tell him to get better.</p>
+    <p>Tell him to get better. (500 something went wrong.)</p>
   </div>
 </body>
 </html>
